# target-storeforce

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
src/target_storeforce/: entrypoint.py  generator.py  target.py
test/fixtures/: config-header-jsonl.json  config-header.json  config-no-header-multistream.json  config-no-header.json
test/target_storeforce/: conftest.py  entrypoint_test.py  generator_test.py  target_test.py
